# tidy-builder

./: Cargo.toml  LICENSE  Makefile  README.md
src/: attr.rs  attribute.rs  attrs.rs  err.rs  error.rs  gen.rs  generics.rs  lib.rs  main.rs  ty.rs  wrap.rs
src/generator/: impl_constraint.rs  impl_default.rs  impl_init.rs  impl_setter.rs  mod.rs
tests/: all_default.rs  all_optional.rs  all_required.rs  all_required_with_const.rs  all_required_with_generics.rs  all_required_with_lifetime.rs  all_required_with_lifetimes_generics_consts.rs  default.rs  default_async.rs  default_values_for_optionals.rs  empty_struct.rs  everything.rs  generics_with_bounds.rs  generics_with_bounds_and_where_clause.rs  generics_with_lifetimes.rs  multiple_initialization.rs  nightly_ui.rs  no_generics_reorder.rs  optional.rs  optional_async.rs  repeated_setters.rs  repeated_setters_for_optionals.rs  repeated_setters_overrided_with_setter.rs  required.rs  required_async.rs  skip_optional_and_defaults.rs  stable_all_optional.rs  stable_default_values.rs  stable_generics_with_const_generics.rs  stable_generics_with_where_clause.rs  stable_generics_without_bounds.rs  stable_impl_default_no_required_fields.rs  stable_no_generics.rs  stable_repeated_setters_for_default_fields.rs  stable_repeated_setters_overrided_for_optionals.rs  stable_ui.rs  ui.rs
tests/nightly_ui/: Cargo.toml  better_error.stderr  rust-toolchain.toml
tests/nightly_ui/src/: main.rs
tests/nightly_ui/tests/ui/: better_error.rs  better_error.stderr
tests/ui/: call_skipped_setter_of_default.rs  call_skipped_setter_of_default.stderr  call_skipped_setter_of_optional.rs  call_skipped_setter_of_optional.stderr  default_value_for_non_default_field.rs  default_value_for_non_default_field.stderr  generics_with_bounds.rs  generics_with_bounds.stderr  generics_with_bounds_and_where_clause.rs  generics_with_bounds_and_where_clause.stderr  generics_with_const_generics.rs  generics_with_const_generics.stderr  generics_with_lifetimes.rs  generics_with_lifetimes.stderr  generics_with_where_clause.rs  generics_with_where_clause.stderr  generics_without_bounds.rs  generics_without_bounds.stderr  multiple_initialization.rs  multiple_initialization.stderr  no_generics.rs  no_generics.stderr  (+8 more)
(+20 files in other folders)
