[package]
name = "tidy-builder"
version = "0.1.0"
edition = "2021"
description = "tidy-builder is a builder generator that is compile-time correct"
authors = ["m.amin.rayej <m.amin.rayej@gmail.com>"]
repository = "https://github.com/maminrayej/tidy-builder"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["builder", "builder_pattern"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.42"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["extra-traits"] }
convert_case = "0.5.0"

[dev-dependencies]
trybuild = "1.0"