[package]
name = "tidy-builder"
version = "0.1.0"
edition = "2021"
description = "tidy-builder is a builder generator that is compile-time correct"
authors = ["m.amin.rayej <m.amin.rayej@gmail.com>"]
repository = "https://github.com/maminrayej/tidy-builder"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["builder", "builder_pattern"]

[features]
better_error = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.64"
quote = "1.0.29"
syn = { version = "2.0.25", features = ["full", "extra-traits"] }
convert_case = "0.6.0"

[dev-dependencies]
trybuild = "1.0.81"
