[package]
name = "tidy-builder-nightly-test"
version = "0.1.0"
edition = "2021"
description = "tidy-builder is a builder generator that is compile-time correct"
authors = ["m.amin.rayej <m.amin.rayej@gmail.com>"]
repository = "https://github.com/maminrayej/tidy-builder"
license = "MIT"
categories = ["rust-patterns"]
keywords = ["builder", "builder_pattern"]

[dependencies]
tidy-builder = { path = "../../", features = ["better_error"] }

[dev-dependencies]
trybuild = "1.0"
